--- a/public/index.html
+++ b/public/index.html
@@ -1,116 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Daily Manifestation Bot</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      color: #333;
-    }
-    .container {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .logo {
-      width: 80px;
-      height: auto;
-      margin-bottom: 1rem;
-    }
-    h1 {
-      margin: 0;
-      font-size: 1.75rem;
-      text-align: center;
-      color: #333;
-    }
-    .description {
-      font-size: 1rem;
-      text-align: center;
-      color: #555;
-      margin: 0.5rem 0 1.5rem;
-      line-height: 1.4;
-    }
-    label {
-      font-weight: 600;
-      align-self: flex-start;
-      color: #555;
-      margin: 0.5rem 0 0.3rem;
-    }
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid #ddd;
-      border-radius: 0.5rem;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-    }
-    input:focus,
-    textarea:focus {
-      outline: none;
-      border-color: #667eea;
-      box-shadow: 0 0 0 2px rgba(102, 126, 234, 0.2);
-    }
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      font-weight: 600;
-      color: #fff;
-      background: #667eea;
-      cursor: pointer;
-      transition: background 0.3s;
-      margin-top: 0.5rem;
-    }
-    button:hover {
-      background: #5563c1;
-    }
-    #qrContainer {
-      text-align: center;
-      margin-bottom: 1rem;
-      width: 100%;
-    }
-    .hidden {
-      display: none;
-    }
-    #message {
-      font-size: 0.9rem;
-      text-align: center;
-      margin-top: 1rem;
-      color: #555;
-      white-space: pre-wrap;
-    }
-    footer {
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #777;
-      text-align: center;
-    }
-    footer a {
-      color: #667eea;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
+    body { margin: 0; padding: 0; font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #667eea, #764ba2); display: flex; align-items: center; justify-content: center; min-height: 100vh; color: #333; }
+    .container { background: #fff; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.1); max-width: 400px; width: 100%; display: flex; flex-direction: column; align-items: center; }
+    .logo { width: 80px; margin-bottom: 1rem; }
+    h1 { margin: 0; font-size: 1.75rem; text-align: center; color: #333; }
+    .description { font-size: 1rem; text-align: center; color: #555; margin: 0.5rem 0 1.5rem; line-height: 1.4; }
+    label { font-weight: 600; align-self: flex-start; color: #555; margin: 0.5rem 0 0.3rem; }
+    input, textarea { width: 100%; padding: 0.75rem; border: 1px solid #ddd; border-radius: 0.5rem; margin-bottom: 1rem; font-size: 1rem; }
+    input:focus, textarea:focus { outline: none; border-color: #667eea; box-shadow: 0 0 0 2px rgba(102,126,234,0.2); }
+    button { width:100%; padding:0.75rem; border:none; border-radius:0.5rem; font-size:1rem; font-weight:600; color:#fff; background:#667eea; cursor:pointer; transition:background 0.3s; margin-top:0.5rem; }
+    button:hover { background:#5563c1; }
+    #qrContainer { text-align:center; margin-bottom:1rem; width:100%; }
+    .hidden { display:none; }
+    #message { font-size:0.9rem; text-align:center; margin-top:1rem; color:#555; white-space:pre-wrap; }
+    footer { margin-top:2rem; font-size:0.8rem; color:#777; text-align:center; }
+    footer a { color:#667eea; text-decoration:none; }
+    footer a:hover { text-decoration:underline; }
   </style>
 </head>
 <body>
@@ -147,22 +58,30 @@
 
     document.getElementById('getQrBtn').addEventListener('click', async () => {
       const userId = document.getElementById('userIdInput').value.trim();
-      if (!userId) {
-        alert('Please enter a valid WhatsApp number.');
-        return;
-      }
+      if (!userId) return alert('Please enter a valid WhatsApp number.');
+
       messageDiv.textContent = 'Generating QR code...';
       qrContainer.classList.remove('hidden');
       qrContainer.innerHTML = '';
+
       try {
         const res = await fetch(`/start/${encodeURIComponent(userId)}`);
-        const text = await res.text();
-        if (!res.ok) {
-          throw new Error(`Error ${res.status}: ${text}`);
+        const data = await res.json();
+
+        if (data.error) throw new Error(data.error);
+
+        if (data.qr) {
+          // Decode base64 to SVG string & inject
+          const svgText = atob(data.qr);
+          qrContainer.innerHTML = svgText;
+          messageDiv.textContent = 'Scan this QR with WhatsApp and then submit your manifestations.';
+          manifestForm.classList.remove('hidden');
+        } else if (data.success) {
+          messageDiv.textContent = '✅ Session established! Submit your manifestations below.';
+          manifestForm.classList.remove('hidden');
+        } else {
+          throw new Error('Unexpected server response');
         }
-        qrContainer.innerHTML = text;
-        messageDiv.textContent = 'Scan this QR with your WhatsApp. After scanning, submit your manifestations below.';
-        manifestForm.classList.remove('hidden');
       } catch (err) {
         messageDiv.textContent = err.message;
         console.error('QR Error:', err);
@@ -172,23 +91,20 @@
     document.getElementById('submitManifestBtn').addEventListener('click', async () => {
       const userId = document.getElementById('userIdInput').value.trim();
       const rawText = document.getElementById('manifestationsInput').value.trim();
-      if (!rawText) {
-        alert('Please enter at least one manifestation.');
-        return;
-      }
-      const items = rawText.split('\n').map(line => line.trim()).filter(line => line);
+      if (!rawText) return alert('Please enter at least one manifestation.');
+
+      const items = rawText.split('\n').map(l => l.trim()).filter(Boolean);
       messageDiv.textContent = 'Saving manifestations...';
+
       try {
         const res = await fetch('/manifestations', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ userId, items })
         });
-        const text = await res.text();
-        if (!res.ok) {
-          throw new Error(`Error ${res.status}: ${text}`);
-        }
-        messageDiv.textContent = text;
+        const data = await res.json();
+        if (data.success) messageDiv.textContent = 'Manifestations saved! You will receive daily reminders.';
+        else throw new Error(data.error || 'Save failed');
       } catch (err) {
         messageDiv.textContent = err.message;
         console.error('Save Error:', err);
