--- a/public/index.html
+++ b/public/index.html
@@ -2,112 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daily Manifestation Bot</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Manifestation Bot</title>
   <style>
-    body { margin: 0; padding: 0; font-family: 'Inter', sans-serif; background: linear-gradient(135deg, #667eea, #764ba2); display: flex; align-items: center; justify-content: center; min-height: 100vh; color: #333; }
-    .container { background: #fff; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.1); max-width: 400px; width: 100%; display: flex; flex-direction: column; align-items: center; }
-    .logo { width: 80px; margin-bottom: 1rem; }
-    h1 { margin: 0; font-size: 1.75rem; text-align: center; color: #333; }
-    .description { font-size: 1rem; text-align: center; color: #555; margin: 0.5rem 0 1.5rem; line-height: 1.4; }
-    label { font-weight: 600; align-self: flex-start; color: #555; margin: 0.5rem 0 0.3rem; }
-    input, textarea { width: 100%; padding: 0.75rem; border: 1px solid #ddd; border-radius: 0.5rem; margin-bottom: 1rem; font-size: 1rem; }
-    input:focus, textarea:focus { outline: none; border-color: #667eea; box-shadow: 0 0 0 2px rgba(102,126,234,0.2); }
-    button { width:100%; padding:0.75rem; border:none; border-radius:0.5rem; font-size:1rem; font-weight:600; color:#fff; background:#667eea; cursor:pointer; transition:background 0.3s; margin-top:0.5rem; }
-    button:hover { background:#5563c1; }
-    #qrContainer { text-align:center; margin-bottom:1rem; width:100%; }
-    .hidden { display:none; }
-    #message { font-size:0.9rem; text-align:center; margin-top:1rem; color:#555; white-space:pre-wrap; }
-    footer { margin-top:2rem; font-size:0.8rem; color:#777; text-align:center; }
-    footer a { color:#667eea; text-decoration:none; }
-    footer a:hover { text-decoration:underline; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f2f4f8;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    header img {
+      height: 80px;
+    }
+    header h1 {
+      margin: 10px 0 5px;
+      font-size: 2.5em;
+    }
+    header p {
+      margin: 0;
+      font-size: 1.1em;
+      color: #555;
+    }
+    .form-group {
+      margin: 20px 0;
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+    }
+    input[type="text"] {
+      padding: 10px;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      margin-bottom: 10px;
+    }
+    button {
+      padding: 10px;
+      font-size: 1em;
+      background: #0069d9;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0053ba;
+    }
+    #qrCode {
+      margin-top: 30px;
+      max-width: 260px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+    footer {
+      margin-top: auto;
+      padding-top: 40px;
+      font-size: 0.9em;
+      color: #777;
+    }
+    footer a {
+      color: #0069d9;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <img src="/logo.png" alt="Daily Manifestation Bot Logo" class="logo" />
-    <h1>Daily Manifestation Bot</h1>
-    <p class="description">Enter your goals and affirmations, then receive a random manifestation reminder each day to help you take action and stay motivated.</p>
+  <header>
+    <img src="logo.png" alt="Manifestation Bot Logo" />
+    <h1>Manifestation Bot</h1>
+    <p>Set your daily intention and let our AI-powered WhatsApp bot remind you!</p>
+  </header>
 
-    <div id="setup">
-      <label for="userIdInput">Your WhatsApp Number</label>
-      <input type="text" id="userIdInput" placeholder="e.g., 972501234567" />
-      <button id="getQrBtn">Get &amp; Scan QR</button>
-    </div>
-
-    <div id="qrContainer" class="hidden"></div>
-
-    <div id="manifestForm" class="hidden">
-      <label for="manifestationsInput">Your Manifestations</label>
-      <textarea id="manifestationsInput" placeholder="I will...\nI attract..."></textarea>
-      <button id="submitManifestBtn">Save &amp; Start</button>
-    </div>
-
-    <div id="message"></div>
-
-    <footer>
-      created for fun using an AI stack by <a href="https://www.linkedin.com/in/talgurevich/" target="_blank" rel="noopener">Tal G</a>
-    </footer>
+  <div class="form-group">
+    <label for="uniqueId">Your Phone Number (without +):</label>
+    <input id="uniqueId" type="text" placeholder="e.g. 972504425322" />
+    <button id="startBtn">Get QR Code</button>
   </div>
 
+  <img id="qrCode" src="" alt="QR Code will appear here" style="display:none;" />
+
+  <footer>
+    created for fun using an AI stack by
+    <a href="https://www.linkedin.com/in/talgurevich/" target="_blank">Tal G</a>
+  </footer>
+
   <script>
-    const qrContainer = document.getElementById('qrContainer');
-    const manifestForm = document.getElementById('manifestForm');
-    const messageDiv = document.getElementById('message');
-
-    document.getElementById('getQrBtn').addEventListener('click', async () => {
-      const userId = document.getElementById('userIdInput').value.trim();
-      if (!userId) return alert('Please enter a valid WhatsApp number.');
-
-      messageDiv.textContent = 'Generating QR code...';
-      qrContainer.classList.remove('hidden');
-      qrContainer.innerHTML = '';
-
+    document.getElementById('startBtn').addEventListener('click', async () => {
+      const id = document.getElementById('uniqueId').value.trim();
+      if (!id) return alert('Please enter your phone number.');
       try {
-        const res = await fetch(`/start/${encodeURIComponent(userId)}`);
+        const res = await fetch(`/start/${id}`);
         const data = await res.json();
-
-        if (data.error) throw new Error(data.error);
-
         if (data.qr) {
-          // Decode base64 to SVG string & inject
-          const svgText = atob(data.qr);
-          qrContainer.innerHTML = svgText;
-          messageDiv.textContent = 'Scan this QR with WhatsApp and then submit your manifestations.';
-          manifestForm.classList.remove('hidden');
-        } else if (data.success) {
-          messageDiv.textContent = '✅ Session established! Submit your manifestations below.';
-          manifestForm.classList.remove('hidden');
+          const img = document.getElementById('qrCode');
+          img.src = data.qr;
+          img.style.display = 'block';
         } else {
-          throw new Error('Unexpected server response');
+          alert('Error: ' + (data.error || 'Unknown'));
         }
       } catch (err) {
-        messageDiv.textContent = err.message;
-        console.error('QR Error:', err);
-      }
-    });
-
-    document.getElementById('submitManifestBtn').addEventListener('click', async () => {
-      const userId = document.getElementById('userIdInput').value.trim();
-      const rawText = document.getElementById('manifestationsInput').value.trim();
-      if (!rawText) return alert('Please enter at least one manifestation.');
-
-      const items = rawText.split('\n').map(l => l.trim()).filter(Boolean);
-      messageDiv.textContent = 'Saving manifestations...';
-
-      try {
-        const res = await fetch('/manifestations', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ userId, items })
-        });
-        const data = await res.json();
-        if (data.success) messageDiv.textContent = 'Manifestations saved! You will receive daily reminders.';
-        else throw new Error(data.error || 'Save failed');
-      } catch (err) {
-        messageDiv.textContent = err.message;
-        console.error('Save Error:', err);
+        alert('Failed to load QR: ' + err.message);
       }
     });
   </script>
