--- a/public/index.html
+++ b/public/index.html
@@ -494,6 +494,15 @@
     </div>
   </div>
 
+  <!-- Footer -->
+  <footer style="text-align: center; padding: 2rem 1rem; margin-top: 3rem; color: rgba(255,255,255,0.8); font-size: 0.9rem;">
+    developed for fun using an AI stack by 
+    <a href="https://www.linkedin.com/in/talgurevich/" target="_blank" rel="noopener" 
+       style="color: white; text-decoration: none; font-weight: 500; border-bottom: 1px solid rgba(255,255,255,0.3); padding-bottom: 1px;">
+      Tal Gurevich
+    </a>
+  </footer>
+
   <script>
     let currentUserId = null;
     let currentStep = 1;
